# weatherfetch

./: Cargo.toml  README.md
bac/src/: args.rs  display.rs  main.rs  weather.rs
install/: install_unix.sh
src/: args.rs  config.rs  display.rs  location.rs  main.rs  weather.rs
src/ascii/: clear.txt  cloudy.txt  partly_cloudy.txt  placeholder.txt  raining.txt  snow_hail.txt  thunderstorm.txt
