[package]
name = "weatherfetch"
version = "1.2.4"
edition = "2024"

[dependencies]
reqwest  = { version = "0.12", features = ["json", "blocking"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
clap     = { version = "4",    features = ["derive"] }
colored  = "2"
dirs     = "5"
chrono = "0.4"